// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<PasswordConfirm /> rendering should render correctly 1`] = `
<div>
  <div
    class="container content"
    id="password-confirm"
  >
    <div
      class="inner"
    >
      <form
        aria-label="password confirm form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <h1>
            Reset your password
          </h1>
          <div
            class="fieldset"
          >
            <div
              class="row password"
            >
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="new-password"
                class="input "
                id="password"
                name="newPassword1"
                pattern=".{6,}"
                placeholder="password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
            <div
              class="row password-confirm"
            >
              <label
                for="password-confirm"
              >
                Confirm password
              </label>
              <input
                autocomplete="new-password"
                class="input "
                id="password-confirm"
                name="newPassword2"
                pattern=".{6,}"
                placeholder="confirm password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
          </div>
          <div
            class="row submit"
          >
            <input
              class="button full"
              type="submit"
              value="Change password"
            />
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PasswordConfirm /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div>
  <div
    class="container content"
    id="password-confirm"
  >
    <div
      class="inner"
    >
      <form
        aria-label="password confirm form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <h1>
            PWD_CONFIRM_H
          </h1>
          <div
            class="fieldset"
          >
            <div
              class="row password"
            >
              <label
                for="password"
              >
                PWD_LBL
              </label>
              <input
                autocomplete="new-password"
                class="input "
                id="password"
                name="newPassword1"
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required=""
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="PWD_REVEAL"
                />
              </div>
            </div>
            <div
              class="row password-confirm"
            >
              <label
                for="password-confirm"
              >
                CONFIRM_PWD_LBL
              </label>
              <input
                autocomplete="new-password"
                class="input "
                id="password-confirm"
                name="newPassword2"
                pattern=".{6,}"
                placeholder="CONFIRM_PWD_PHOLD"
                required=""
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="PWD_REVEAL"
                />
              </div>
            </div>
          </div>
          <div
            class="row submit"
          >
            <input
              class="button full"
              type="submit"
              value="PWD_CONFIRM"
            />
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        />
      </div>
    </div>
  </div>
</div>
`;
